--- a/assets/styles.css
+++ b/assets/styles.css
@@ -47,3 +47,44 @@ header nav{
     width: 440px;
     height: 470px;
 }
+
+body{
+    font-family: 'Poppins', sans-serif;
+    background: var(--bgDark);
+}
+.container{
+    max-width: 1152px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+.hero{
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+}
+.hero .left img{
+    width: 400px;
+    margin-left: 1em;
+}
+.hero .right{
+    color: var(--white);
+    margin-top: -1rem;
+    margin-left: -20rem;
+}
+.hero .right h6{
+    font-size: 1.6rem;
+    color: var(--primary);
+    margin-bottom: 0.5rem;
+}
+.hero .right h1{
+    font-size: 4rem;
+    font-weight: 100;
+    line-height: 1.2;
+    margin-bottom: 2rem;
+}
+.hero .right h1 span{
+    color: var(--primary);
+}
+.hero .right p{
+    line-height: 1.9;
+    margin-bottom: 2rem;
+}
