--- a/assets/styles.css
+++ b/assets/styles.css
@@ -51,6 +51,7 @@ header nav{
 body{
     font-family: 'Poppins', sans-serif;
     background: var(--bgDark);
+    color: var(--white);
 }
 .container{
     max-width: 1152px;
@@ -66,7 +67,6 @@ body{
     margin-left: 1em;
 }
 .hero .right{
-    color: var(--white);
     margin-top: -1rem;
     margin-left: -20rem;
 }
@@ -87,4 +87,45 @@ body{
 .hero .right p{
     line-height: 1.9;
     margin-bottom: 2rem;
+}
+
+/***** about page *****/
+section{
+    padding: 4rem;
+}
+section.about h1{
+    margin-bottom: 1rem;
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+section.about h1 span{
+    color: var(--primary);
+}
+section.about h3{
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    font-weight: 600;
+}
+section.about p{
+    font-family: 'Lato', sans-serif;
+    color: var(--secondary);
+    line-height: 1.9rem;
+    margin-bottom: 2rem;
+}
+section.about socials{
+    display: flex;
+    margin-bottom: -4rem;
+}
+section.about .socials a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 35px;
+    margin-right: 0.8rem;
+    border-radius: 50%;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+}
+section.about .socials a:hover{
+    background: var(--primary);
 }
