--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,6 +9,7 @@
 --bgLight: rgb(190, 181, 181);
 }
 
+/*** Desktop first approach for responsive designing *****/
 *{
     padding: 0;
     margin: 0;
@@ -143,6 +144,7 @@ header nav .right {
     .hero .right h1 {
         font-size: 3.2rem;
     }
+    
 }
 
 /** adjustments for SM screens **/
@@ -225,7 +227,7 @@ header nav .right {
         height: 80px;
     }
 
-    /**services**/
+    /*****services page****/
     section.services .card-ctn {
         overflow-x: auto;
     }
@@ -237,6 +239,22 @@ header nav .right {
     section.services .card-ctn .card img {
         top: -0.5rem; /* Reduce the upward offset for smaller screens */
     }
+
+    /**** blog page ****/
+    .blog-ctn .blog h1 {
+        font-size: 32px;
+        line-height: 38px;
+    }
+    .blog-ctn .blog h2 {
+        font-size: 22px;
+        line-height: 28px;
+    }
+
+   .blog-ctn .blog .cover-img img{
+        height: 230px;
+    
+    }
+
 }
 
 /** adjustements for XS screens**/
@@ -267,6 +285,11 @@ header nav .right {
      .hero .right h1 {
         font-size: 2.8rem;
      }
+
+     .blog-ctn .blog .cover-img img{
+        height: 160px;
+    
+    }
 }
 
 .show {
@@ -385,6 +408,9 @@ section.services .card-ctn .card p:hover{
     color: var(--white);
 }
 
+
+/******* Blog page *******/
+
 .blog-ctn{
     max-width: 800px;
     margin: 0 auto;
@@ -399,24 +425,41 @@ section.services .card-ctn .card p:hover{
     /* border: 2px solid green; */
 }
 
-.blog h1, .blog h2, .blog p, .blog div {
-    margin-bottom: 2rem;
+.blog h1, .blog p, .blog div {
+    margin-bottom: 2.3rem;
     
 }
 
+.blog h1 {
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 52px;
+}
+.blog h1, .blog h2 {
+    font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+}
+
+.blog h2 {
+    margin-bottom: 1rem;
+}
 .blog h2 {
     align-self: self-start;
 }
-.blog p {
+.cover-img em {
+    opacity: 0.8;
+    font-size: 16px;
 }
 .blog .cover-img {
-    max-width: 720px;
-    max-height: 600px;
-
+    min-width: 230px;
+    max-height: 400px;
+    /* border: 2px solid green; */
 }
 
 .blog .cover-img img {
-    width: 100%;
     max-width: 100%;
-    height: 339px;
+    width: 100%;
+    height: 300px;
+    display: block;
+
 }
